# ybooks-desktop

./: .gitignore  README.md  package.json
.github/workflows/: build-windows.yml
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
